<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        style="@style/TextView.GreyFade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_message"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_films"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/items_film">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>