<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

            <include layout="@layout/shimmer_placeholder_items" />

        </LinearLayout>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/items_film">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>